Modified base styles for testing purposes

--- a/_includes/components/site-header.njk
+++ b/_includes/components/site-header.njk
@@ -4,11 +4,12 @@
       <img
         class="site-header__logo"
         src="/static/img/logo.png"
-        alt="Fernfolio Logo"
+        alt="Don pepo logo"
         width="25px"
         height="25px"
         loading="lazy">
-      {{ metadata.title }}
+        {# _metadata/metadata.json #}
+      {{ metadata.title}}
     </a>
   </span>
   <nav class="site-header__nav">
