--- a/_includes/assets/css/variables.css
+++ b/_includes/assets/css/variables.css
@@ -6,7 +6,7 @@
   /* Background Colors */
   --color-bg: #ffffff;
   --color-bg-secondary: #f7f7f7;
-  --color-bg-accent: #c79191;
+  --color-bg-accent: #91c795;
 
   /* Text and Border Colors */
   --color-text: #222222;
