--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <small>
-    This project is maintained by <a href="https://www.tylerroderick.com">Tyler M. Roderick</a>.
+    This website is based off <strong>FERNFOLIO</strong>: this project is maintained by <a href="https://www.tylerroderick.com">Tyler M. Roderick</a>.
     Check out the <a href="{{ pkg.repository.url }}">GitHub repo</a>.
   </small>
 </footer>
