--- a/index.njk
+++ b/index.njk
@@ -23,6 +23,10 @@ section: home
     </div>
   </div>
 
+  <div class="hero__body">
+    <p>{{home.body}}</p>
+  </div>
+
   <hr>
   <h2>Projects</h2>
   {% set projectlist = collections.project %}
