Modificaciones de pagina principal, about me y work

--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <small>
-    This website is based off <strong>FERNFOLIO</strong>: which is maintained by <a href="https://www.tylerroderick.com">Tyler M. Roderick</a>.
-    Check out the <a href="{{ pkg.repository.url }}">GitHub repo</a>.
+    Created using a custom version of <strong>FERNFOLIO</strong> project,  maintained by <a href="https://www.tylerroderick.com">Tyler M. Roderick</a>.
+    Check out his <a href="{{ pkg.repository.url }}">GitHub repo</a>.
   </small>
 </footer>
